# Tidal-Media-Downloader

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
TIDALDL-PY/: requirements.txt  setup.py
TIDALDL-PY/tidal_dl/: __init__.py  apiKey.py  decryption.py  download.py  events.py  gui.py  model.py  paths.py  printf.py  settings.py  tidal.py
TIDALDL-PY/tidal_dl/lang/: __init__.py  arabic.py  chinese.py  croatian.py  czech.py  danish.py  dutch.py  english.py  filipino.py  french.py  german.py  hungarian.py  italian.py  japanese.py  korean.py  language.py  norwegian.py  polish.py  portuguese.py  russian.py  spanish.py  turkish.py  ukrainian.py  vietnamese.py
src/tidal_dl/: __init__.py  apiKey.py  api_client.py  cli.py  config.py  decryption.py  download.py  download_manager.py  enums.py  events.py  flac_converter.py  gui.py  logger.py  main.py  model.py  path_builder.py  paths.py  printf.py  settings.py  tidal.py  util.py
src/tidal_dl/aigpy/: LockHelper.py  __init__.py  cmdHelper.py  convertHelper.py  dictHelper.py  downloadHelper.py  ffmpegHelper.py  fileHelper.py  githubHelper.py  m3u8Helper.py  memoryHelper.py  modelHelper.py  musicHelp.py  netHelper.py  pathHelper.py  pipHelper.py  progressHelper.py  readme.txt  stringHelper.py  systemHelper.py  tagHelper.py  threadHelper.py  timeHelp.py
src/tidal_dl/lang/: __init__.py  arabic.py  chinese.py  croatian.py  czech.py  danish.py  dutch.py  english.py  filipino.py  french.py  german.py  hungarian.py  italian.py  japanese.py  korean.py  language.py  norwegian.py  polish.py  portuguese.py  russian.py  spanish.py  turkish.py  ukrainian.py  vietnamese.py
